--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -27,6 +27,10 @@
 @import "library.less";
 @import "toastr.less";
 
+// UI directory
+@import "ui/paired-collection-creator.less";
+
+
 // Mixins
 
 .unselectable {
