--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -1,3 +1,80 @@
+.ui-radiobutton {
+    label {
+        height: 23px;
+        line-height: 1em;
+    }
+}
+
+.ui-table {
+    &:extend(.grid);
+
+    tbody td {
+        &:extend(.grid tbody td);
+    }
+    .current {
+        &:extend(.grid .current);
+    }
+}
+
+.ui-table-form-info {
+    &:extend(.toolParamHelp);
+}
+
+.ui-table-form-separator {
+	font-weight: bold;
+	font-size: 0.9em;
+}
+
+.ui-label {
+	font-weight: bold;
+}
+
+.ui-message {
+    padding: 2px 2px 2px 10px;
+}
+
+.ui-icon {
+    font-size: 1.2em;
+}
+
+.ui-button-icon {
+    margin-right: 5px;
+    ul {
+        i {
+            font-size: 1.2em; margin-right: 5px; position: relative; top: 1px;
+        }
+    }
+}
+
+.ui-button-icon .button {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.ui-button-icon .title {
+    position: relative;
+    font-size: 0.8em;
+    font-weight: normal;
+    top: -1px;
+}
+
+.ui-input {
+    &:extend(.form-control);
+}
+
+.ui-tabs {
+    .ui-tabs-add {
+        font-size       : 0.8em;
+        margin-right    : 5px;
+    }
+    
+    .ui-tabs-delete {
+        font-size       : 0.8em;
+        margin-left     : 5px;
+        cursor          : pointer;
+    }
+}
+
 .no-highlight {
     -webkit-user-select: none; /* webkit (safari, chrome) browsers */
     -moz-user-select: none; /* mozilla browsers */
@@ -5,30 +82,38 @@
     -ms-user-select: none; /* IE10+ */
 }
 
-.portlet-view {
-    min-width: 300px;
+.ui-portlet {
+    border: solid @form-border 1px;
+    .border-radius(@panel-border-radius);
 
-    .portlet-title-icon {
-        float: left;
-        font-size: 1.2em;
-        padding-top: 4px;
-    }
-    
-    .portlet-title {
-        overflow: hidden;
-        padding: 2px 5px 2px 10px;
-    }
+    position: relative;
+    clear: both;
+    width: auto;
+    height: 100%;
 
-    .portlet-title-text {
-        float: left;
-        padding-top: 2px;
-    }
-    
-    .portlet-operations {
+    .portlet-header {
+        padding: 5px 10px;
+        background: @form-heading-bg;
+        border-bottom: solid @form-border 1px;
+        padding: 2px 8px;
+        overflow: visible;
         float: right;
-        cursor: pointer;
+        width:100%;
+
+        h1, h2, h3, h4, h5, h6 {
+            float: left;
+            font-weight: normal;
+            display: inline-block;
+            vertical-align: middle;
+            font-size: 1em;
+            margin: 3px;
+            
+            .icon {
+                font-size: 1.2em;
+            }
+        }
     }
-    
+
     .portlet-buttons {
         height: 50px;
         padding: 10px;
@@ -37,10 +122,26 @@
     .portlet-content {
         height: inherit;
         padding: 10px;
+        clear: both;
+
+        .content {
+            padding     : 10px;
+            height      : 100%;
+            width       : 100%;
+        
+            .buttons {
+                height: 50px;
+                padding: 10px;
+            }
+        }
+    }
+
+    .no-scroll {
+        height: ~'calc(100% - 80px)';
     }
 }
 
-.popover-view {
+.ui-popover {
     max-width: 700px;
     display: none;
 
@@ -57,7 +158,7 @@
     }
 }
 
-.styled-select {
+.ui-select {
     position: relative;
     height: 27px;
     overflow: hidden;
