--- a/static/style/src/less/trackster.less
+++ b/static/style/src/less/trackster.less
@@ -200,6 +200,14 @@
         background-color: #DDDDDD;
     }
 
+    // Truncate long track names.
+    .track-name {
+        max-width: 200px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     .menubutton {
         margin-left: 0px;
     }
